[gd_scene load_steps=4 format=3 uid="uid://cmpqklo3mltk4"]

[ext_resource type="Script" path="res://camera_system/camera_gimball.gd" id="1_jxq7f"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3aghs"]
albedo_color = Color(0, 1, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_rn3s3"]
material = SubResource("StandardMaterial3D_3aghs")
top_radius = 0.1
bottom_radius = 0.1
height = 0.2

[node name="CameraGimball" type="Node3D"]
script = ExtResource("1_jxq7f")
mouse_sensitivity = 0.037

[node name="GridPosition" type="Marker3D" parent="."]
top_level = true

[node name="HorizontalGimball" type="Marker3D" parent="GridPosition"]

[node name="VerticalGimball" type="Marker3D" parent="GridPosition/HorizontalGimball"]

[node name="Camera" type="Camera3D" parent="GridPosition/HorizontalGimball/VerticalGimball"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.28411)

[node name="Target_Visual" type="MeshInstance3D" parent="."]
top_level = true
mesh = SubResource("CylinderMesh_rn3s3")
